k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "yuriv"
  namespace: "agents-team"
spec:
  selector:
    app: "yuriv"
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
